--- a/src/GCodeViewer.WPF/App.xaml
+++ b/src/GCodeViewer.WPF/App.xaml
@@ -7,6 +7,7 @@
     <Application.Resources>
         <SolidColorBrush x:Key="BackgroundColor" Color="#1E1E1E" />
         <SolidColorBrush x:Key="ToolbarBackgroundColor" Color="#2D2D30" />
+        <SolidColorBrush x:Key="BorderBrush" Color="#33334D" />
         <SolidColorBrush x:Key="PrimaryColor" Color="#bb86fc" />
         <SolidColorBrush x:Key="SecondaryColor" Color="#03dac5" />
         <SolidColorBrush x:Key="FontColor" Color="#E1E1E1" />
