--- a/src/GCodeViewer.WPF/Settings/SettingsPage.xaml
+++ b/src/GCodeViewer.WPF/Settings/SettingsPage.xaml
@@ -19,6 +19,7 @@
             Background="{StaticResource ToolbarBackgroundColor}"
             DockPanel.Dock="Top">
             <Button
+                Height="25"
                 Margin="5,0,0,0"
                 HorizontalAlignment="Left"
                 Command="{Binding GoBack}"
