--- a/src/GCodeViewer.WPF/MainWindow/MainWindow.xaml
+++ b/src/GCodeViewer.WPF/MainWindow/MainWindow.xaml
@@ -5,10 +5,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:viewer3D="clr-namespace:GCodeViewer.WPF.Controls.Viewer3D;assembly=GCodeViewer.WPF.Controls.Viewer3D"
-    Title="MainWindow"
+    Title="GCodeViewer"
     Width="1600"
     Height="800"
     mc:Ignorable="d">
+
     <Grid Background="DarkGray" DockPanel.Dock="Bottom">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*" />
