--- a/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
+++ b/src/GCodeViewer.WPF/TextEditor/TextEditorPage.xaml
@@ -6,8 +6,8 @@
     xmlns:editor="clr-namespace:GCodeViewer.WPF.Controls.TextEditor;assembly=GCodeViewer.WPF.Controls.TextEditor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     Title="TextEditorPage"
-    d:DesignHeight="450"
-    d:DesignWidth="800"
+    d:DesignHeight="800"
+    d:DesignWidth="450"
     mc:Ignorable="d">
 
     <Page.InputBindings>
@@ -45,14 +45,13 @@
                 Background="#2D2D30"
                 DockPanel.Dock="Top">
                 <Menu
-                    Margin="5,0,0,0"
+                    VerticalAlignment="Center"
                     Background="Transparent"
                     DockPanel.Dock="Left">
-                    <MenuItem Margin="3" Background="Transparent">
+                    <MenuItem Margin="10,0,0,0" Background="Transparent">
                         <MenuItem.Header>
                             <Image
-                                Height="22"
-                                VerticalAlignment="Center"
+                                Margin="-4,3,-4,3"
                                 Opacity="1.0"
                                 Source="/GCodeViewer.WPF;component/Resources/document-icon.png" />
                         </MenuItem.Header>
@@ -64,17 +63,14 @@
                 </Menu>
 
                 <Menu
-                    Margin="0,0,5,0"
                     HorizontalAlignment="Right"
+                    VerticalAlignment="Center"
                     Background="Transparent"
                     DockPanel.Dock="Right">
-                    <MenuItem
-                        Margin="3"
-                        HorizontalAlignment="Center"
-                        Command="{Binding GoToSettingsPage}">
+                    <MenuItem Margin="0,0,10,0" Command="{Binding GoToSettingsPage}">
                         <MenuItem.Header>
                             <Image
-                                Height="25"
+                                Margin="-4,1,-4,1"
                                 VerticalAlignment="Center"
                                 Source="/GCodeViewer.WPF;component/Resources/settings-icon.png" />
                         </MenuItem.Header>
